--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pursue RNG domination over your friends with 5 dice and a score card."
     />
+    <meta property="og:title" content="Roll!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://play-roll.com" />
+    <meta property="og:image" content="https://imgur.com/9DSQBde" />
+    <meta
+      property="og:description"
+      content="Pursue RNG domination over your friends with 5 dice and a score card."
+    />
+    <meta name="theme-color" content="#FF0000" />
+
+    <!-- Include this to make the og:image larger -->
+    <meta name="twitter:card" content="https://imgur.com/9DSQBde" />
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
