links to image instead of imgur

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Roll!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://play-roll.com" />
-    <meta property="og:image" content="https://imgur.com/9DSQBde" />
+    <meta property="og:image" content="https://i.imgur.com/9DSQBde.jpg" />
     <meta
       property="og:description"
       content="Pursue RNG domination over your friends with 5 dice and a score card."
