--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#FF0000" />
 
     <!-- Include this to make the og:image larger -->
-    <meta name="twitter:card" content="https://imgur.com/9DSQBde" />
+    <meta name="twitter:card" content="https://i.imgur.com/9DSQBde.jpg" />
 
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
